<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191919"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0sp"
        tools:layout_editor_absoluteY="0sp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/main_activity_title"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal"
            android:paddingTop="10sp">

            <TextView
                android:id="@+id/stepLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/steps_label"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/stepCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="@string/default_step_count"
                android:textColor="#FD1B1B"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/log_data"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/setsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/sets_label"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/setsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:ems="15"
                    android:inputType="number"
                    android:textColor="#F3F3F3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/repsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/reps_label"
                    android:textColor="#FBFBFB"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/repsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:ems="15"
                    android:inputType="number"
                    android:textColor="#FAFAFA" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/gameButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="#00FFFFFF"
                        android:gravity="left|center_vertical"
                        android:contentDescription="@string/game_activity_title"
                        app:icon="@drawable/controller_icon_185104_removebg_preview"
                        app:iconGravity="textTop"
                        app:iconSize="75sp" />

                    <Button
                        android:id="@+id/upgradeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="#00FFFFFF"
                        android:gravity="right|center_vertical"
                        android:contentDescription="@string/upgrade_activity_title"
                        android:textColorLink="#FBF6F6"
                        app:icon="@drawable/upgrade_13_removebg_preview"
                        app:iconGravity="textTop"
                        app:iconSize="50sp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="97sp"
                    android:layout_height="122sp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/simple_fire_flame_symbol_illustration_isolated_on_white_background_free_vector_removebg_preview" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>