<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpgradeActivity">

    <LinearLayout
        android:layout_width="409sp"
        android:layout_height="729sp"
        android:background="#3E3E3E"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1sp"
        tools:layout_editor_absoluteY="1sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="57sp"
                android:layout_height="60sp"
                android:layout_gravity="center_horizontal"
                android:background="#00FFFFFF"
                android:layout_alignTop="@id/textView4"
                android:layout_alignStart="@id/textView4"
                app:icon="@drawable/_978442_removebg_preview"
                app:iconGravity="textTop"
                app:iconSize="50sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20sp"
                android:text="@string/upgrade_activity_title"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upgrade_1"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/weightUpgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upgrade_cost_1"
                app:cornerRadius="25sp"
                app:icon="@drawable/upgrade_13_removebg_preview"
                app:iconPadding="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="40sp"
                android:paddingBottom="40sp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="39sp"
                    android:layout_height="36sp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cash_removebg_preview" />

                <TextView
                    android:id="@+id/cashReserve1"
                    android:layout_width="360sp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="#02EA0C"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>